# RNAseq_SS

./: .gitignore  README.md  pyproject.toml
configs/: baseline_domain_transfer.yaml  baseline_m6a.yaml
peakcalling/: data_preview.ipynb  peak_calling.py
results/comparison/: histories.json  metrics.json
scripts/: compare_models.py  dataprocessing.py  train_baseline.py
src/rnaseq_ss/: CNN.py  GAN.py  __init__.py  config.py  data.py  losses.py  model.py  train.py
tests/: test_model_shapes.py
